--- a/cotuba/pom.xml
+++ b/cotuba/pom.xml
@@ -11,4 +11,7 @@
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
+	<modules>
+		<module>cotuba-core</module>
+	</modules>
 </project>
