--- a/cotuba/cotuba-core/pom.xml
+++ b/cotuba/cotuba-core/pom.xml
@@ -9,19 +9,21 @@
 	</parent>
 	<artifactId>cotuba-core</artifactId>
 	<dependencies>
-
 		<dependency>
 			<groupId>commons-cli</groupId>
 			<artifactId>commons-cli</artifactId>
 			<version>1.4</version>
 		</dependency>
-
 		<dependency>
 			<groupId>com.atlassian.commonmark</groupId>
 			<artifactId>commonmark</artifactId>
 			<version>0.11.0</version>
 		</dependency>
-
+		<dependency>
+			<groupId>cotuba</groupId>
+			<artifactId>cotuba-pdf</artifactId>
+			<version>${project.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>nl.siegmann.epublib</groupId>
 			<artifactId>epublib-core</artifactId>
@@ -37,7 +39,6 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-
 		<dependency>
 			<groupId>net.sf.kxml</groupId>
 			<artifactId>kxml2</artifactId>
@@ -50,7 +51,6 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-
 		<dependency>
 			<groupId>com.itextpdf</groupId>
 			<artifactId>html2pdf</artifactId>
@@ -62,33 +62,25 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-
 		<dependency>
 			<groupId>org.jsoup</groupId>
 			<artifactId>jsoup</artifactId>
 			<version>1.11.2</version>
 		</dependency>
-
 	</dependencies>
-
 	<repositories>
-
 		<repository>
 			<id>psiegman-repo</id>
 			<url>https://github.com/psiegman/mvn-repo/raw/master/releases</url>
 		</repository>
-
 		<repository>
 			<id>iText Repository</id>
 			<name>iText Repository-releases</name>
 			<url>https://repo.itextsupport.com/releases</url>
 		</repository>
-
 		<repository>
 			<id>mvn-repo</id>
 			<url>https://rawgit.com/alexandreaquiles/mvn-repo/master</url>
 		</repository>
-
 	</repositories>
-
 </project>
