--- a/cotuba/cotuba-cli/pom.xml
+++ b/cotuba/cotuba-cli/pom.xml
@@ -2,17 +2,13 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-
 	<parent>
 		<groupId>cotuba</groupId>
 		<artifactId>cotuba</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-
 	<artifactId>cotuba-cli</artifactId>
-
 	<dependencies>
-
 		<dependency>
 			<groupId>commons-cli</groupId>
 			<artifactId>commons-cli</artifactId>
@@ -23,9 +19,17 @@
 			<artifactId>cotuba-core</artifactId>
 			<version>${project.version}</version>
 		</dependency>
-
+		<dependency>
+			<groupId>cotuba</groupId>
+			<artifactId>cotuba-pdf</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>cotuba</groupId>
+			<artifactId>cotuba-epub</artifactId>
+			<version>${project.version}</version>
+		</dependency>
 	</dependencies>
-
 	<build>
 		<plugins>
 			<plugin>
@@ -48,5 +52,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
