--- a/cotuba/cotuba-epub/pom.xml
+++ b/cotuba/cotuba-epub/pom.xml
@@ -7,17 +7,12 @@
 		<artifactId>cotuba</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	<artifactId>cotuba-core</artifactId>
+	<artifactId>cotuba-epub</artifactId>
 	<dependencies>
 		<dependency>
-			<groupId>commons-cli</groupId>
-			<artifactId>commons-cli</artifactId>
-			<version>1.4</version>
-		</dependency>
-		<dependency>
-			<groupId>com.atlassian.commonmark</groupId>
-			<artifactId>commonmark</artifactId>
-			<version>0.11.0</version>
+			<groupId>cotuba</groupId>
+			<artifactId>cotuba-core</artifactId>
+			<version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>nl.siegmann.epublib</groupId>
@@ -46,32 +41,11 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-		<dependency>
-			<groupId>com.itextpdf</groupId>
-			<artifactId>html2pdf</artifactId>
-			<version>2.0.0</version>
-			<exclusions>
-				<exclusion>
-					<groupId>com.itextpdf</groupId>
-					<artifactId>forms</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-		<dependency>
-			<groupId>org.jsoup</groupId>
-			<artifactId>jsoup</artifactId>
-			<version>1.11.2</version>
-		</dependency>
 	</dependencies>
 	<repositories>
 		<repository>
 			<id>psiegman-repo</id>
 			<url>https://github.com/psiegman/mvn-repo/raw/master/releases</url>
-		</repository>
-		<repository>
-			<id>iText Repository</id>
-			<name>iText Repository-releases</name>
-			<url>https://repo.itextsupport.com/releases</url>
 		</repository>
 		<repository>
 			<id>mvn-repo</id>
