--- a/cotuba/pom.xml
+++ b/cotuba/pom.xml
@@ -15,5 +15,6 @@
 		<module>cotuba-core</module>
 		<module>cotuba-cli</module>
 		<module>cotuba-pdf</module>
+		<module>cotuba-epub</module>
 	</modules>
 </project>
