--- a/cotuba/pom.xml
+++ b/cotuba/pom.xml
@@ -16,5 +16,6 @@
 		<module>cotuba-cli</module>
 		<module>cotuba-pdf</module>
 		<module>cotuba-epub</module>
+		<module>cotuba-web</module>
 	</modules>
 </project>
